# solidity_plonk_verifier

./: Verifier.sol
bellman_vk_codegen/: Cargo.toml  template.sol
bellman_vk_codegen/src/: lib.rs
